syntax = "proto3";

package googlecloudstorage;

service SignaturesService {
  rpc GenerateSignedUrls (GenerateSignedUrlsRequest) returns (GenerateSignedUrlsResponse);
}

message GenerateSignedUrlsRequest {
  string title = 1;
}

message GenerateSignedUrlsResponse {
  string m3u8 = 1;
  map<string, string> segments = 2;
  string updatedContent = 3;
}